--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -171,7 +171,11 @@
         </activity>
         <activity
             android:name=".activities.InstanceUploaderActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="org.odk.collect.android.activities.COLLECT"/>
+            </intent-filter>
+        </activity>
         <activity
             android:name=".preferences.PreferencesActivity"
             android:label="@string/app_name" />
