updated gradle plugin

--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -79,6 +79,7 @@ android {
         sourceCompatibility javaVersion
         targetCompatibility javaVersion
     }
+    buildToolsVersion '25.0.2'
 }
 
 configurations.all {
